k8s/09-dese-iot-mqtt-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dese-iot-mqtt-deployment
  labels:
    app: dese-iot-mqtt
    tier: iot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dese-iot-mqtt
  template:
    metadata:
      labels:
        app: dese-iot-mqtt
        tier: iot
    spec:
      containers:
        - name: mosquitto
          image: eclipse-mosquitto:2.0
          ports:
            - containerPort: 1883
              name: mqtt
            - containerPort: 9001
              name: websockets
          volumeMounts:
            - name: mosquitto-config
              mountPath: /mosquitto/config/mosquitto.conf
              subPath: mosquitto.conf
            - name: mosquitto-data
              mountPath: /mosquitto/data
      volumes:
        - name: mosquitto-config
          configMap:
            name: mosquitto-config
        - name: mosquitto-data
          persistentVolumeClaim:
            claimName: mosquitto-pvc
