k8s/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: dese-frontend-service
spec:
  selector:
    app: dese-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
