k8s/ingress-mubot.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dese-mubot-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: mubot.poolfab.com.tr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dese-mubot-service
                port:
                  number: 80
